css/index.css
/* ... */
.article-box {
    float: left;
    width: 745px;
    height: auto;
    margin-left: 10px;
    margin-top: 20px;
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    overflow: hidden;
    transition: all 0.6s;
}

.choosen-box {
    width:25px;
    height:32px;
    background-color:rgb(180, 180, 180);
    margin: 0 auto;
    float:left;
    text-align:center;
    font-size:20px;
    border-radius: 4px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    overflow: hidden;
    transition: all 0.6s;
}

.article-box:hover {
    box-shadow: 0 0 10px #767676;
    transform: scale(1.02);
}

.choosen-box:hover {
    box-shadow: 0 0 10px #767676;
    transform: scale(1.15); 
}

.ab-content {
    width: 100%;
    margin: auto 0;
    overflow: hidden;
}

.ab-content .empty-box {
    height: 100%;
    width: 250px;
    margin: 0 auto;
}

.empty-box .svg-box {
    height: 150px;
    width: 100%;
    margin-top: 20px;
}

.empty-box .tip {
    width: 100%;
    height: 50px;
    line-height: 50px;
    font-size: 18px;
    margin-top: 10px;
    color: #666666;
}

.ab-content svg {
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 150px;
    width: 150px;
}

.article-title {
    width: 390px;
    height: 40px;
    line-height: 40px;
    margin-top: 5px;
    margin-left: 20px;
    float: left;
}

.article-title a {
    width: 100%;
    height: 100%;
    font-size: 20px;
    color: #292929;
    font-weight: normal;
    display: inline-block;
    transition: all 0.3s ease-in-out;
    overflow: hidden; /*超出部分隐藏*/
    text-overflow: ellipsis; /* 超出部分显示省略号 */
    white-space: nowrap; /*规定段落中的文本不进行换行 */
}

.article-title a:hover {
    color: #007aff;
}

.article-img-box {
    float: left;
    width: 320px;
    height: 180px;
    margin: 0;
    overflow: hidden;
    display: block;
    /*border-radius: 10px;*/
}

.article-img-box .article-img {
    display: inline-block;
    /*height: auto;*/
    width: 100%;
    transition: all 0.6s;
}

.article-img-box img:hover {
    /*鼠标移入图片放大*/
    transform: scale(1.1);
    -webkit-transform: scale(1.1); /*Safari 和 Chrome*/
    -moz-transform: scale(1.1); /*Firefox*/
    -ms-transform: scale(1.1); /*IE9*/
    -o-transform: scale(1.1); /*Opera*/
}

.article-detail-box {
    float: left;
    height: 60px;
    width: 390px;
    margin-top: 5px;
    margin-left: 20px;
    line-height: 30px;
    font-size: 15px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    -o-text-overflow: ellipsis; /* 支持 Opera */
    text-overflow: ellipsis; /* 支持 IE */
    overflow: hidden;
}


.article-tail-box {
    float: left;
    height: 30px;
    width: 400px;
    margin-top: 2px;
    margin-left: 20px;
    line-height: 30px;
}

.article-tail-box i {
    width: 20px;
    height: 20px;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    display: inline-block;
    margin: 5px 3px;
}

.article-tail-box .comment-number {
    height: 100%;
    line-height: 30px;
}

.article-tail-box .read-number {
    height: 100%;
    line-height: 30px;
    margin-right: 5px;
}

.article-date {
    float: right;
    height: 100%;
    font-size: 16px;
    margin-right: 10px;
}

.article-author {
    float: right;
    height: 100%;
    font-size: 16px;
    margin-right: 20px;
    max-width: 100px;
}

.column-container {
    width: 362px;
    max-width: 100%;
    margin: 20px 5px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    transition: ease-in-out 0.3s;
    border-radius: 10px;
}

.column-container:hover {
    box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
}

.column-container-wider {
    width: 724px;
    max-width: 100%;
    margin: 20px 5px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    transition: ease-in-out 0.3s;
    border-radius: 10px;
}

.column-container-wider:hover {
    box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
}
.column_box {
    width: 100%;
    padding: 12px 24px;
    background-color: var(--bg-card);
    border-radius: 10px;
    overflow: hidden;
}


.column_box .column-title {
    width: 86%;
    height: 40px;
    line-height: 40px;
    padding: 0 7%;
    font-size: 16px;
    font-weight: 600;
}

.column-title .at-sort {
    height: 41px;
    width: 100%;
}

.column-title .at-sort-comment-a {
    height: 40px;
    padding: 0 2px;
    text-align: left;
    border-bottom: #3aa4ff solid 2px;
    font-weight: bold;
}

.column_box .column-category {
    height: 55px;
    line-height: 55px;
    font-size: 15px;
    /*    !*单行文本溢出显示省略号*!
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;*/
}

.column_box .column-category a {
    width: 86%;
    padding: 0 7%;
    height: 100%;
    float: left;
    color: #666666;
    transition: border-left-width 0.3s ease-in-out;
    /*单行文本溢出显示省略号*/
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.column_box .column-category a:hover {
    color: #007aff;
    border-left: #3aa4ff solid 3px;
    background-color: #fafafa;
}

#a-active {
    color: #007aff;
    border-left: #3aa4ff solid 3px;
}

#pagination {
    margin-top: 15px;
    margin-left: 1%;
    margin-right: 1%;
    width: 98%;
}

.article-cate {
    width: 390px;
    height: 25px;
    line-height: 15px;
    margin: 2px 0 0 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    float: left;
}

.article-cate a {
    font-size: 13px;
    color: #444555;
    padding: 5px 10px;
    height: 15px;
    background-color: #f0f0f0;
    border-radius: 10px;
    /*font-weight: 900;*/
    display: inline-block;
    transition: all 0.3s ease-in-out;
}

.article-cate a:hover {
    background-color: #e2e3e3;
}
/* ... */

